--- a/BaseDados/Código/Readme
+++ b/BaseDados/Código/Readme
@@ -2,27 +2,25 @@ O código da base de dados deve ser submetido a um Pull Request e enviado para a
 (Criar novo ficheiro texto e adicionar o código para já)
 
 
---Projeto Imobiliaria
-
 
 CREATE TABLE tipologia
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descrição varchar(50) );
+descricao varchar(50) );
 
 CREATE TABLE comodidades
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descrição varchar(50) );
+descricao varchar(50) );
 
 CREATE TABLE cidades
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descrição varchar(50) );
+descricao varchar(50) );
 
 CREATE TABLE tipo_imovel
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descrição varchar(50) );
+descricao varchar(50) );
 
 
-INSERT INTO tipo_imovel (descrição) VALUES
+INSERT INTO tipo_imovel (descricao) VALUES
 	('Garagem'),
 	('Quarto'),
 	('Moradia'),
@@ -31,7 +29,7 @@ INSERT INTO tipo_imovel (descrição) VALUES
 	
 	
 
-INSERT INTO comodidades (descrição) VALUES
+INSERT INTO comodidades (descricao) VALUES
 	('Lavandaria'),
 	('Varanda'),
 	('Piscina'),
@@ -39,7 +37,7 @@ INSERT INTO comodidades (descrição) VALUES
 	('Arrecadação');
 	
 
-INSERT INTO tipologia (descrição) VALUES
+INSERT INTO tipologia (descricao) VALUES
 	('T0'),
 	('T1'),
 	('T2'),
@@ -47,7 +45,7 @@ INSERT INTO tipologia (descrição) VALUES
 	('T4'),
 	('T5');
 
-INSERT INTO cidades (descrição) VALUES
+INSERT INTO cidades (descricao) VALUES
 	('Odivelas'),
 	('Seixal'),
 	('Gondomar'),
