Tabela Imovel e as relações com Foreign Keys

--- a/BaseDados/Código/Readme
+++ b/BaseDados/Código/Readme
@@ -66,6 +66,40 @@ INSERT INTO cidades (descricao) VALUES
 	('Vila Franca de Xira'),
 	('Viseu');
 	
-	
+CREATE TABLE IMOVEL (
+imovel_id SERIAL primary key,
+cliente_id INT NOT NULL,
+vendedor_id INT NOT NULL,
+tipo_imovel_id INT NOT NULL,
+cidades_id INT NOT NULL,
+tipologia_id INT NOT NULL,
+titulo VARCHAR(100) NOT NULL,
+morada VARCHAR(200) NOT NULL,
+c_postal VARCHAR(8) NOT NULL,
+descricao VARCHAR(200),
+ano_construcao DATE NOT NULL,
+preco DECIMAL(8,2) NOT NULL,
+metros_quadrados INT NOT NULL,
+classe_energetica CHAR,
+
+   CONSTRAINT fk_cliente
+      FOREIGN KEY(cliente_id) 
+	  REFERENCES cliente(id),
+   CONSTRAINT fk_vendedor
+	  FOREIGN KEY(vendedor_id)
+	  REFERENCES vendedor(id),
+	CONSTRAINT fk_tipo_imovel
+	  FOREIGN KEY(tipo_imovel_id)
+	  REFERENCES tipo_imovel(id),
+	CONSTRAINT fk_cidades
+	  FOREIGN KEY(cidades_id)
+	  REFERENCES cidades(id),
+	CONSTRAINT fk_tipologia
+      FOREIGN KEY(tipologia_id)
+	  REFERENCES tipologia(id)
+	);
+
+ALTER TABLE Imovel_Has_Comodidades 
+	ADD CONSTRAINT fk_imovel_id FOREIGN KEY (fk_imovel_id) REFERENCES imovel(imovel_id)	
 
 
