--- a/BaseDados/Código/Readme
+++ b/BaseDados/Código/Readme
@@ -83,7 +83,7 @@ CREATE TABLE pedido_visita (
     fk_imovel_id INT
 );
 
--- Tabela Imovel_Comodidades
+-- Tabela Imovel_Has_Comodidades
 CREATE TABLE imovel_has_comodidades (
 	PRIMARY KEY (fk_imovel_id, fk_comodidades_id),
     fk_imovel_id INT,
