--- a/BaseDados/Código/Readme
+++ b/BaseDados/Código/Readme
@@ -1,34 +1,34 @@
-CREATE TABLE tipologia
+CREATE TABLE typology
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descricao varchar(50) );
+description varchar(50) );
 
-CREATE TABLE comodidades
+CREATE TABLE amenities
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descricao varchar(50) );
+description varchar(50) );
 
-CREATE TABLE cidades
+CREATE TABLE city
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descricao varchar(50) );
+description varchar(50) );
 
-CREATE TABLE tipo_imovel
+CREATE TABLE realstate_type
 (id SERIAL  PRIMARY KEY  NOT NULL ,
-descricao varchar(50) );
+description varchar(50) );
 
-INSERT INTO tipo_imovel (descricao) VALUES
-	('Garagem'),
-	('Quarto'),
-	('Moradia'),
-	('Apartamento'),
-	('Estudio');
+INSERT INTO realstate_type (description ) VALUES
+	('Garage'),
+	('Bedroom'),
+	('House'),
+	('apartment'),
+	('studio');
 
-INSERT INTO comodidades (descricao) VALUES
-	('Lavandaria'),
-	('Varanda'),
-	('Piscina'),
-	('Terraço'),
-	('Arrecadação');
+INSERT INTO amenities (description) VALUES
+	('Laundry'),
+	('balcony'),
+	('pool'),
+	('Terrace'),
+	('Storage');
 
-INSERT INTO tipologia (descricao) VALUES
+INSERT INTO typology (description) VALUES
 	('T0'),
 	('T1'),
 	('T2'),
@@ -36,7 +36,7 @@ INSERT INTO tipologia (descricao) VALUES
 	('T4'),
 	('T5');
 
-INSERT INTO cidades (descricao) VALUES
+INSERT INTO City (description) VALUES
 	('Odivelas'),
 	('Seixal'),
 	('Gondomar'),
@@ -57,57 +57,57 @@ INSERT INTO cidades (descricao) VALUES
 	('Vila Franca de Xira'),
 	('Viseu');
 
-CREATE TABLE vendedor (
+CREATE TABLE Agent (
     id SERIAL PRIMARY KEY,
-    nome VARCHAR(150),
-    telemovel VARCHAR(13),
+    name VARCHAR(150),
+    cellphone VARCHAR(13),
     email VARCHAR(150) UNIQUE
 );
 
-CREATE TABLE cliente (
+CREATE TABLE client (
     id SERIAL PRIMARY KEY,
-    nome VARCHAR(100) NOT NULL,
+    name VARCHAR(100) NOT NULL,
     email VARCHAR(150) UNIQUE,
-    palavra_passe VARCHAR(150) NOT NULL
+    password VARCHAR(150) NOT NULL
 );
 
-CREATE TABLE pedido_visita (
+CREATE TABLE visit_request (
     id SERIAL PRIMARY KEY,
-    nome VARCHAR(150),
+    name VARCHAR(150),
     email VARCHAR(150) NOT NULL,
-    fk_imovel_id INT
+    fk_realstate_id INT
 );
 
-CREATE TABLE imovel_has_comodidades (
-	PRIMARY KEY (fk_imovel_id, fk_comodidades_id),
-    fk_imovel_id INT,
-    fk_comodidades_id INT    
+CREATE TABLE realstate_has_amenities (
+	PRIMARY KEY (fk_realstate_id, fk_amentities_id),
+    fk_realstate_id INT,
+    fk_amentities_id INT    
 );
 
-CREATE TABLE imovel (
-	imovel_id SERIAL primary key,
-	titulo VARCHAR(100) NOT NULL,
-	morada VARCHAR(200) NOT NULL,
-	c_postal VARCHAR(8) NOT NULL,
-	descricao VARCHAR(200),
-	ano_construcao DATE NOT NULL,
-	preco DECIMAL(8,2) NOT NULL,
-	metros_quadrados INT NOT NULL,
-	classe_energetica CHAR,
-	fk_cliente_id INT,
-	fk_vendedor_id INT,
-	fk_tipo_imovel_id INT,
-	fk_cidades_id INT,
-	fk_tipologia_id INT
+CREATE TABLE realstate (
+	realstate_id SERIAL primary key,
+	title VARCHAR(100) NOT NULL,
+	adress VARCHAR(200) NOT NULL,
+	zip_code VARCHAR(8) NOT NULL,
+	description VARCHAR(200),
+	build_date DATE NOT NULL,
+	price DECIMAL(8,2) NOT NULL,
+	square_meter INT NOT NULL,
+	energy_class CHAR,
+	fk_client_id INT,
+	fk_agent_id INT,
+	fk_realstate_type_id INT,
+	fk_city_id INT,
+	fk_typology_id INT
 );
 
-ALTER TABLE Imovel_Has_Comodidades 
-	ADD CONSTRAINT fk_imovel_id FOREIGN KEY (fk_imovel_id) REFERENCES imovel(imovel_id),
-	ADD CONSTRAINT fk_comodidades_id FOREIGN KEY (fk_comodidades_id) REFERENCES comodidades(id);
+ALTER TABLE realstate_has_amenities 
+	ADD CONSTRAINT fk_realstate_id FOREIGN KEY (fk_realstate_id) REFERENCES realstate(realstate_id),
+	ADD CONSTRAINT fk_amenities_id FOREIGN KEY (fk_amenities_id) REFERENCES amenities(id);
 
 ALTER TABLE imovel
-ADD CONSTRAINT fk_cliente_id FOREIGN KEY (fk_cliente_id) REFERENCES cliente(id),
-ADD CONSTRAINT fk_vendedor_id FOREIGN KEY (fk_vendedor_id) REFERENCES vendedor(id),
-ADD CONSTRAINT fk_tipo_imovel_id FOREIGN KEY (fk_tipo_imovel_id) REFERENCES tipo_imovel(id),
-ADD CONSTRAINT fk_cidades_id FOREIGN KEY (fk_cidades_id) REFERENCES cidades(id),
-ADD CONSTRAINT fk_tipologia_id FOREIGN KEY (fk_tipologia_id) REFERENCES tipologia(id)
+ADD CONSTRAINT fk_client_id FOREIGN KEY (fk_client_id) REFERENCES client(id),
+ADD CONSTRAINT fk_agent_id FOREIGN KEY (fk_agent_id) REFERENCES agent(id),
+ADD CONSTRAINT fk_realstate_type_id FOREIGN KEY (fk_realstate_type_id) REFERENCES realstate_type(id),
+ADD CONSTRAINT fk_city_id FOREIGN KEY (fk_city_id) REFERENCES city(id),
+ADD CONSTRAINT fk_typology_id FOREIGN KEY (fk_typology_id) REFERENCES typology(id)
